--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,6 @@ html {
 }
 
 body {
-  position: fixed !important;
   margin: 0;
   padding: 0;
   font-family: "Arial", "Times New Roman", Times, Georgia, serif;
